# soragiri

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  bot.py  pyproject.toml  requirements.txt  soragiri_cli.py
.github/workflows/: docker.yml
cogs/: __init__.py
cogs/soragiri/: __init__.py  cog.py  core.py
core/: __init__.py  soragiri.py
discord/: __init__.py
discord/cogs/: __init__.py  soragiri_cog.py
